--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ section .title::after {
 
 .home {
     display: flex;
-    background: url("images/banner.png") no-repeat center;
+    background: url("banner.png") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
